--- a/recipies/american-goulash.html
+++ b/recipies/american-goulash.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>American Goulash</title>
+    <link rel="stylesheet" href="american-goulash.css">
 </head>
 <body>
-    <h1> Chef John's American Goulash</h1>
+    <h1 class="title"> Chef John's American Goulash</h1>
     <img src="https://www.allrecipes.com/thmb/zyawrVkFMp5l11FS6u8ibuDLsiY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/JF_275489_ChefJohnsAmericanGoulash_4x3_13361-0bec55d8f2ea474a9bf4af7fb0a01ec1.jpg" alt="American Goulash" height="300" width="300">
     <h4>Description</h4>
     <p> This Americanized version of goulash was invented to stretch a small amount of beef into enough food for a not-so-small family. It's a simple dish that doesn't taste simple, so it's perfect for your weeknight dinner rotation.</p>
