--- a/recipies/jalapeno-poppers.html
+++ b/recipies/jalapeno-poppers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jalapeño Poppers</title>
+    <link rel="stylesheet" href="jalapeno-poppers.css">
 </head>
 <body>
     <h1>jalapeño Poppers</h1>
